k8s/infrastructure/monitoring/controllers/kube-prometheus-stack/httpRoute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: default
  hostnames:
  - "grafana.homelab"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
